--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,10 @@ main{
     flex: 1;
     border: 1px solid black;
     background-color: blanchedalmond;
+
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 #main-button-container{
     flex: 2;
