--- a/styles/style.css
+++ b/styles/style.css
@@ -18,11 +18,11 @@ main{
     flex-direction: column;
 
     width: 27%;
-    min-height: 60%;
+    height: 60%;
     background-color: white;
 }
 #input-box{
-    flex: 1;
+    height: 30%;
     border: 1px solid black;
     background-color: blanchedalmond;
 
@@ -31,7 +31,7 @@ main{
     justify-content: flex-end;
 }
 #main-button-container{
-    flex: 2;
+    height: 70%;
     border: 1px solid black;
     background-color: aliceblue;
 
